methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:11: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (n: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
def avance(n:Int) {for (i <- 1 to n) avance ;}
                                     ^FlowerPot:17: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (n: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
    avance ; 
    ^FlowerPot:19: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (n: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
    avance ; 
    ^FlowerPot:22: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (n: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
  avance ;
  ^